--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Liu Tianchi (柳天驰)"
 description              : "PhD student at National University of Singapore"
-repository               : "TianchiLiu.github.io"
+repository               : "Liu-Tianchi.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Liu Tianchi"
-  avatar           : "images/my_pic.jpg"
+  avatar           : "images/android-chrome-512x512.png"
   bio              : "[Curriculum Vitae]"
   location         : "Singapore"
   employer         :
@@ -37,13 +37,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "TianchiLiu"
+  github           : "Liu-Tianchi"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/tianchi-liu"
+  linkedin         : "tianchi-liu"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
