--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Liu Tianchi (柳天驰)"
-description              : "PhD student at National University of Singapore"
+description              : "PhD Candidate @ National University of Singapore | Senior Research Engineer @ A*STAR"
 repository               : "Liu-Tianchi.github.io"
 google_scholar_stats_use_cdn : true
 
