--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Liu Tianchi"
+  name             : "Liu Tianchi (柳天驰)"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "[Curriculum Vitae]"
+  bio              : 
   location         : "Singapore"
   employer         :
   pubmed           : 
