--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Rongxuan Li"
-description              : "Rongxuan Li"
+description              : "Final year Math major undergraduate at The Chinese University of Hong Kong"
 repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
