--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Rongxuan Li"
 description              : "Final year Math major undergraduate at The Chinese University of Hong Kong"
-repository               : "RayeRen/acad-homepage.github.io"
+repository               : "rongxuan-li/rongxuan-li.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
