--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Rongxuan Li"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Lorem ipsum College"
+  bio              : "CUHK"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
