--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Rongxuan Li"
-description              : "Final year Math major undergraduate at The Chinese University of Hong Kong"
+description              : "Final-year math major undergraduate student at the Chinese University of Hong Kong (CUHK)."
 repository               : "rongxuan-li.github.io"
 google_scholar_stats_use_cdn : true
 
