--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Rongxuan Li"
   avatar           : "images/72*72.png"
-  bio              : "Final-year math major undergrad student at The Chinese University of Hong Kong (CUHK)."
+  bio              : "Final-year math major undergrad student at the Chinese University of Hong Kong (CUHK)."
   location         : "Hong Kong"
   employer         :
   pubmed           : 
