--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   pubmed           : 
   # googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "jerrylirongxuan@gmail.com"
-  researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Rongxuan-Li-3"
   uri              :
   bitbucket        :
   codepen          :
