--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 # Site Settings
 title                    : "Rongxuan Li"
 description              : 
-repository               : "rongxuan-li.github.io"
+repository               : "rongxuan-li/rongxuan-li.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
-# google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
 google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
