--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Rongxuan Li"
-  avatar           : "images/72*72.png"
+  avatar           : "images/rongxuan.png"
   bio              : "Final-year math major undergrad student at the Chinese University of Hong Kong (CUHK)."
   location         : "Hong Kong"
   employer         :
