--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Hong Kong"
   employer         :
   pubmed           : 
-  # googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
+  googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=jtmUf-cAAAAJ"
   email            : "jerrylirongxuan@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Rongxuan-Li-3"
   uri              :
