--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Rongxuan Li"
   avatar           : "images/rongxuan.png"
-  bio: "PhD student at University of Southern California
+  bio: "PhD student at University of Southern California"
   location         : "Los Angeles, CA"
   employer         :
   pubmed           : 
