--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,6 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=jtmUf-cAAAAJ"
-  email            : "jerrylirongxuan@gmail.com"
   researchgate     : "https://www.researchgate.net/profile/Rongxuan-Li-3"
   uri              :
   bitbucket        :
@@ -37,7 +36,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "rongxuan-li"
   google_plus      :
   keybase          :
   instagram        :
