--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Educations"
     url: "/#educations"
 
-  - title: "Internships"
+  - title: "Internship"
     url: "/#internships"
 
   - title: "Gallery"
