--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,10 +9,10 @@ main:
   - title: "Honors and Awards"
     url: "/#honors-and-awards"
 
-  - title: "Educations"
-    url: "/#educations"
+  - title: "Education"
+    url: "/#education"
 
-  - title: "Internship"
+  - title: "Internships"
     url: "/#internships"
 
   - title: "Gallery"
