--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,16 +4,16 @@ main:
     url: "/#about-me"
 
   - title: "Publications"
-    url: "/#Publications"
+    url: "/#publications"
 
   - title: "Honors and Awards"
-    url: "/#Honors-and-Awards"
+    url: "/#honors-and-awards"
 
   - title: "Education"
-    url: "/#Education"
+    url: "/#education"
 
   - title: "Internships"
-    url: "/#Internships"
+    url: "/#internships"
 
   - title: "Gallery"
     url: "/gallery/"
